kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: clouddeploy-service
  namespace: clouddeploy

spec:
  selector:
    app: clouddeploy

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
